--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,314 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&family=Roboto:wght@100;400&display=swap");
+
+/* dashboard design for stock market project  */
+:root {
+  --display: rgb(255, 251, 251);
+  --light-back: rgb(214, 214, 214);
+  --dark-back: rgb(115, 115, 115);
+  --low: rgb(255, 0, 0);
+  --high: rgb(0, 249, 12);
+  --neutral: rgb(255, 255, 255);
+  --hover: rgb(201, 201, 201);
+  --active: rgb(247, 241, 241);
+  --selected: rgb(254, 244, 244);
+  --detailed-list: rgb(252, 250, 250);
+  --search: rgb(174, 168, 168);
+  --button: rgb(143, 144, 128);
+  --card-item: rgb(116, 135, 134);
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Poppins", sans-serif;
+}
+
+body {
+  width: 100vw;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#container {
+  height: 700px;
+  width: 375px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  background: var(--display);
+  padding: 1rem 0.5rem;
+  margin: 30px 0;
+  border-radius: 1.5rem;
+  border: 2px solid var(--button);
+  box-shadow: 3px 3px 5px 2px var(--button);
+}
+
+.head-section {
+  width: 100%;
+  height: 3.5rem;
+  background: var(--dark-back);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* padding: 0 0rem; */
+  /* margin: 1rem, 0; */
+  border-radius: 1rem;
+}
+
+.head-section h4{
+
+  display: inline;
+  font-size: 1.3rem;
+  letter-spacing: -1.5px;
+  word-spacing: 2.3px;
+  display: flex;
+  justify-content: center;
+  align-self: center;
+}
+
+#arrow-up {
+  font-size: 1.3rem;
+  color: var(--high);
+  margin-left: 0.5rem;
+}
+#arrow-down {
+  font-size: 1.3rem;
+  color: var(--low);
+  margin-right: 0.5rem;
+}
+
+.option-menu {
+  background: var(--light-back);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  border-radius: 1rem;
+  height: 200px;
+}
+
+.search {
+  width: 100%;
+  height: 3.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+
+.search-bar {
+  width: 100%;
+  height: 80%;
+  display: grid;
+  padding: 0 1.5rem;
+  /* grid-template-columns: 4.33fr 0.67fr; */
+  grid-template-columns: 255px 45px;
+  gap: 0.5rem;
+}
+
+.search-bar input {
+  border-radius: 1rem;
+  padding: 0 1rem;
+  border: none;
+  background: var(--search);
+  color: black;
+  font-size: 1.2rem;
+}
+
+.search-bar input:focus {
+  background: var(--active);
+  outline: none;
+  box-shadow: 1px 1px 1px 0.5px var(--button);
+}
+
+.search-bar button {
+  height: 45px;
+  width: 45px;
+  border-radius: 50%;
+  border: none;
+  background: var(--button);
+  cursor: pointer;
+}
+.search-bar button:hover {
+  background: var(--hover);
+  box-shadow: 2px 2px 5px black;
+}
+
+.search-bar button i {
+  font-size: 1.6rem;
+  color: white;
+}
+
+.option-menu .option {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 15px;
+  width: 100%;
+  padding: 0 1.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.option button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 900;
+  font-size: 1.2rem;
+  height: 2.25rem;
+  letter-spacing: -1px;
+  background: var(--button);
+  border: none;
+  border-radius: 1rem;
+}
+
+.option .option-button:hover {
+  background: var(--hover);
+  cursor: pointer;
+  box-shadow: 2px 2px 5px black;
+}
+
+.option-button.active {
+  background: var(--active);
+  box-shadow: 2px 2px 5px black;
+}
+
+.watchlist-section {
+  background: var(--light-back);
+  border-radius: 1rem;
+  width: 100%;
+  box-shadow: 0px 6px 2px var(--light-back);
+}
+
+.watchlist-heading {
+  height: 2.5rem;
+  font-size: 1.25rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: var(--search);
+  margin: 0.3rem 3rem;
+  margin-top: 1rem;
+  border-radius: 0.75rem;
+  color: rgba(0, 0, 0, 0.6);
+}
+
+.watchlist-container {
+  height: 20rem;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow: auto;
+  /* scrollbar-width: none; */
+  scroll-behavior: smooth;
+}
+.watchlist-container::-webkit-scrollbar {
+  display: none;
+}
+
+.watchlist-container .watchlist {
+  width: 95%;
+  list-style-type: none;
+  height: 55px;
+  padding: 10px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background: var(--card-item);
+  margin: 0.5rem 0.5rem;
+  border-radius: 0.75rem;
+  cursor: pointer;
+}
+
+.watchlist .symbol {
+  font-size: 1.2rem;
+  font-weight: 700;
+  color: rgba(0, 0, 0, 0.7);
+  width: 3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 0.5rem;
+}
+
+.watchlist .price {
+  font-size: 1.2rem;
+  font-weight: 600;
+  height: 2.75rem;
+  width: 5.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 1rem;
+}
+
+.watchlist .time {
+  background: var(--detailed-list);
+  height: 2.25rem;
+  width: 6rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 600;
+  border-radius: 0.9rem;
+}
+
+.watchlist .close {
+  background: var(--low);
+  width: 2rem;
+  height: 2rem;
+  border-radius: 50%;
+  color: white;
+  font-weight: 900;
+  cursor: pointer;
+  font-size: 1.75rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.bg-red {
+  background-color: var(--low);
+}
+
+.bg-green {
+  background: var(--high);
+}
+
+.bg-white {
+  background: white;
+}
+
+.detailed-model {
+  background: var(--detailed-list);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 95%;
+  height: 105px;
+  padding: 0.25rem;
+  border-radius: 0.6rem;
+  /* margin-top: -0.5rem; */
+}
+
+.detailed-model .detail-list {
+  width: 100%;
+  display: grid;
+  background-color:var(--dark-back);
+  grid-template-columns: 22% 14% 14% 14% 14% 21%;
+}
+
+.detailed-model .detail-list li {
+  font-size: 0.7rem;
+  font-weight: 700;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 
