--- a/styles.css
+++ b/styles.css
@@ -1,112 +1,114 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&family=Roboto:wght@100;400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700;800;900&display=swap");
 
 /* dashboard design for stock market project  */
-:root {
-  --display: rgb(255, 251, 251);
-  --light-back: rgb(214, 214, 214);
-  --dark-back: rgb(115, 115, 115);
-  --low: rgb(255, 0, 0);
-  --high: rgb(0, 249, 12);
-  --neutral: rgb(255, 255, 255);
-  --hover: rgb(201, 201, 201);
-  --active: rgb(247, 241, 241);
-  --selected: rgb(254, 244, 244);
-  --detailed-list: rgb(252, 250, 250);
-  --search: rgb(174, 168, 168);
-  --button: rgb(143, 144, 128);
-  --card-item: rgb(116, 135, 134);
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    scrollbar-width: none;
+   
 }
 
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-family: "Poppins", sans-serif;
+body{
+   font-family: Montserrat;
+   background:url('https://s.wsj.net/public/resources/images/ON-DE793_201909_G_20190830121038.gif') no-repeat;
+   background-repeat: no-repeat;
+   background-size: cover;
+   overflow-y: hidden;
+   overflow-x: hidden;
+  }
+
+#main {
+   display: flex;
+    justify-content:center ;
+    align-items: center;
+    width: 100%;
+  margin:20px;
+  height: 70vh;
+  
+}
+.form{
+      backdrop-filter: blur(15px);
+    width: 45%;
+    display: flex;
+    flex-direction: column;
+    padding: 2.5em;
+    background: rgba(255, 255, 255, 0.05);
+    box-shadow: 0 15px 15px rgb(0 0 0 / 30%);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+    border-top: 1px solid rgba(255, 255, 255, 0.1);
+    border-radius: 30px;
+    z-index: 1;
+    color:#fff;
+    font-weight: 200px;
 }
 
-body {
-  width: 100vw;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 
-#container {
-  height: 700px;
-  width: 375px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 1rem;
-  background: var(--display);
-  padding: 1rem 0.5rem;
-  margin: 30px 0;
-  border-radius: 1.5rem;
-  border: 2px solid var(--button);
-  box-shadow: 3px 3px 5px 2px var(--button);
-}
 
-.head-section {
+.main-section {
   width: 100%;
-  height: 3.5rem;
-  background: var(--dark-back);
+  height: 4.0rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  /* padding: 0 0rem; */
-  /* margin: 1rem, 0; */
-  border-radius: 1rem;
+  border-radius: 2rem;
 }
 
-.head-section h4{
+.main-section h4{
 
   display: inline;
   font-size: 1.3rem;
-  letter-spacing: -1.5px;
-  word-spacing: 2.3px;
+  letter-spacing: -1.2px;
+  word-spacing: 0.2rem;
   display: flex;
   justify-content: center;
   align-self: center;
 }
 
-#arrow-up {
-  font-size: 1.3rem;
-  color: var(--high);
-  margin-left: 0.5rem;
-}
-#arrow-down {
-  font-size: 1.3rem;
-  color: var(--low);
-  margin-right: 0.5rem;
+.fa-arrow-up
+{
+  color: rgb(0, 255, 0);
+  font-size: 2.4rem;
+  margin-right: 0.2rem;
 }
 
+.fa-arrow-down
+{
+  color: rgb(255, 0, 0);
+  font-size: 2.4rem;
+  margin-left:0.2rem;
+  
+}
+
+
 .option-menu {
-  background: var(--light-back);
-  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100%;
   border-radius: 1rem;
-  height: 200px;
+  height: 250px;
 }
 
 .search {
-  width: 100%;
-  height: 3.5rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 1rem;
+ /* margin-top: 10px;
+    margin-bottom: 20px; */
+margin: 12px 12px 30px -12px ;
+    padding: 5px;
+    width: 110%;
+    background-color: rgba(0, 0, 0, 0.1);
+    border: 2px solid rgb(207, 199, 199);
+    outline: none;
+    border-radius: 1rem;
+
 }
+
 
 .search-bar {
   width: 100%;
   height: 80%;
   display: grid;
   padding: 0 1.5rem;
-  /* grid-template-columns: 4.33fr 0.67fr; */
   grid-template-columns: 255px 45px;
   gap: 0.5rem;
 }
@@ -115,15 +117,15 @@ body {
   border-radius: 1rem;
   padding: 0 1rem;
   border: none;
-  background: var(--search);
-  color: black;
+  background: transparent;
+  color: white;
   font-size: 1.2rem;
 }
 
-.search-bar input:focus {
-  background: var(--active);
-  outline: none;
-  box-shadow: 1px 1px 1px 0.5px var(--button);
+.search-bar input:focus 
+{
+     outline: none;
+
 }
 
 .search-bar button {
@@ -131,13 +133,11 @@ body {
   width: 45px;
   border-radius: 50%;
   border: none;
-  background: var(--button);
   cursor: pointer;
 }
-.search-bar button:hover {
-  background: var(--hover);
-  box-shadow: 2px 2px 5px black;
-}
+/* .search-bar button:hover {
+  
+} */
 
 .search-bar button i {
   font-size: 1.6rem;
@@ -154,37 +154,75 @@ body {
 }
 
 .option button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-weight: 900;
-  font-size: 1.2rem;
-  height: 2.25rem;
-  letter-spacing: -1px;
-  background: var(--button);
-  border: none;
-  border-radius: 1rem;
-}
+  backdrop-filter: blur(15px);
+  width: 11.5rem;
+  /* display: flex;
+  flex-direction: column; */
+  padding: 1.5em;
+  background: rgba(255, 255, 255, 0.05);
+box-shadow: 0 15px 15px rgb(0 0 0 / 30%);
+border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+border-top: 1px solid rgba(255, 255, 255, 0.1);
+border-radius: 30px;
+z-index: 1;
+color:#fff;
+font-weight: 200px;
+margin-left: -5px;
+margin-right: 21px;
+
+    }
 
 .option .option-button:hover {
-  background: var(--hover);
+ background-color: rgba(255,255,255,0.2);
   cursor: pointer;
   box-shadow: 2px 2px 5px black;
 }
 
 .option-button.active {
-  background: var(--active);
+  background-color: rgba(rgba(47, 0, 109, 0.678));
   box-shadow: 2px 2px 5px black;
 }
-
-.watchlist-section {
-  background: var(--light-back);
+#search-button
+{
+position: absolute;
+	top: 80%;
+	left: 5%;
+	width: 90%;
+	height: 11%;
+	display: flex;
+  margin-top: 17px;
+	justify-content: center;
+	align-items: center;
+	background: rgba(21, 160, 21, 0.068);
+	box-shadow: 0 15px 15px rgba(0, 0, 0, 0.253);
+	border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+	border-top: 1px solid rgba(255, 255, 255, 0.1);
+	border-radius: 30px;
+	padding: 10px;
+	letter-spacing: 1px;
+	text-decoration: none;
+	overflow: hidden;
+	color: #fff;
+	font-weight: 400px;
+	z-index: 1;
+	transition: 0.5s;
+	backdrop-filter: blur(15px);
+}
+#search-button:hover
+{
+  background-color: rgba(255,255,255,0.2);
+  box-shadow: 2px 2px 5px black;
+}
+.watchlist {
+  height:120vh;
+  margin-top: 22%;
+  margin-left: 4%;
   border-radius: 1rem;
-  width: 100%;
-  box-shadow: 0px 6px 2px var(--light-back);
+  width: 90%;
+  box-shadow: 0px 6px 2px transparent;
 }
 
-.watchlist-heading {
+.watchlist-data {
   height: 2.5rem;
   font-size: 1.25rem;
   display: flex;
@@ -197,38 +235,52 @@ body {
   color: rgba(0, 0, 0, 0.6);
 }
 
-.watchlist-container {
-  height: 20rem;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  overflow: auto;
-  /* scrollbar-width: none; */
-  scroll-behavior: smooth;
+.watchlist-list {
+    height: 30rem;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow: auto;
+    scroll-behavior: smooth;
+    background: transparent;
+    background-color: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(10px);
+    padding: 2rem;
+    border-radius: 0.7rem;
+    box-shadow: 0px 3px 29px 0px rgb(0 0 0 / 50%);
+    z-index: 2;
+    border-right: 0.5px solid white;
+   border-bottom: 0.5px solid white;
+   margin:10px;
 }
-.watchlist-container::-webkit-scrollbar {
+.watchlist-list::-webkit-scrollbar {
   display: none;
 }
+input#search-input{ 
+  font-size: 12px;
+}
 
-.watchlist-container .watchlist {
+.watchlist-list .watchlist {
   width: 95%;
   list-style-type: none;
-  height: 55px;
+  height: 7px;
+  background-color:black;
   padding: 10px;
   display: flex;
   justify-content: space-around;
   align-items: center;
-  background: var(--card-item);
+  background: transparent;
   margin: 0.5rem 0.5rem;
   border-radius: 0.75rem;
   cursor: pointer;
+  margin: 3.1rem
 }
 
 .watchlist .symbol {
   font-size: 1.2rem;
   font-weight: 700;
-  color: rgba(0, 0, 0, 0.7);
+  color: wheat;
   width: 3rem;
   display: flex;
   justify-content: center;
@@ -248,7 +300,6 @@ body {
 }
 
 .watchlist .time {
-  background: var(--detailed-list);
   height: 2.25rem;
   width: 6rem;
   display: flex;
@@ -256,36 +307,53 @@ body {
   justify-content: center;
   font-weight: 600;
   border-radius: 0.9rem;
+  font-weight: bold;
 }
-
+.watchlist-list h3
+{
+color: white;
+font-weight: 700;
+letter-spacing: 2px;
+}
 .watchlist .close {
-  background: var(--low);
-  width: 2rem;
-  height: 2rem;
+
+  width: 3.3rem;
+  height: 3.3rem;
   border-radius: 50%;
-  color: white;
+  color: rgb(255, 0, 0);
+ 
   font-weight: 900;
   cursor: pointer;
-  font-size: 1.75rem;
+  font-size: 2.45rem;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .bg-red {
-  background-color: var(--low);
+  background-color: rgba(235, 24, 24, 0.719);
+  color:white;
+}
+.bg-red:hover {
+  background-color: rgba(255, 0, 0, 0.952);
+  color:white;
 }
 
 .bg-green {
-  background: var(--high);
+  background-color: rgba(0, 128, 0, 0.637);
+  color: white;
 }
-
+.bg-green:hover {
+  background-color: rgba(0, 128, 0, 0.973);
+  color: white;
+}
 .bg-white {
   background: white;
 }
 
 .detailed-model {
-  background: var(--detailed-list);
+  
+  color:black;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -293,13 +361,14 @@ body {
   height: 105px;
   padding: 0.25rem;
   border-radius: 0.6rem;
-  /* margin-top: -0.5rem; */
+  margin-top: 12px; 
 }
 
 .detailed-model .detail-list {
+  margin-top: 12px; 
   width: 100%;
   display: grid;
-  background-color:var(--dark-back);
+  background-color:transparent;
   grid-template-columns: 22% 14% 14% 14% 14% 21%;
 }
 
@@ -309,6 +378,39 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top:-29px;
+  color:white;
 }
 
+.footer
+{
+  width: 90%;
+  height: 6%;
+  background: rgba(255, 255, 255, 0.05);
+  box-shadow: 0 15px 15px rgb(0 0 0 / 30%);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  border-top: 1px solid rgba(255, 255, 255, 0.1);
+  border-radius: 30px;
+  z-index: 3;
+  backdrop-filter: blur(10px);
 
+}
+.footer h5
+{
+  text-align: center;
+  color: white;
+  margin-left: 11px;
+}
+
+.footer i
+{
+  color:white;
+  font-size: 21px;
+}
+.footer p
+{
+  font-size: 12px;
+  color: white;
+  text-align: center;
+  margin-left: 2px;
+}
